[gd_scene load_steps=7 format=3 uid="uid://ymqa76nr3jb"]

[ext_resource type="FontFile" uid="uid://cc11lnvwh7ek2" path="res://assets/fonts/manaspace.ttf" id="1_j3sp6"]
[ext_resource type="Script" path="res://scenes/skill_button.gd" id="1_u6rad"]
[ext_resource type="Texture2D" uid="uid://ofrggg61n4t4" path="res://assets/sprites/mana icon.png" id="2_gfnn2"]
[ext_resource type="StyleBox" uid="uid://dqveho1iwy0vh" path="res://resources/ui/border_panel.tres" id="3_2i0t0"]
[ext_resource type="StyleBox" uid="uid://djdh88btgr4u1" path="res://resources/ui/darkened_panel.tres" id="4_7piuy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2t14k"]
size = Vector2(192, 74)

[node name="Skill1" type="Area2D"]
position = Vector2(10, 10)
script = ExtResource("1_u6rad")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(86, 27)
shape = SubResource("RectangleShape2D_2t14k")

[node name="NameLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -17.0
offset_right = 182.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("1_j3sp6")
theme_override_font_sizes/font_size = 20
text = "skillname"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 79.0
offset_top = 35.0
offset_right = 99.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0823529, 0.796078, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("1_j3sp6")
theme_override_font_sizes/font_size = 20
text = "5"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 63.0
offset_top = 35.0
offset_right = 77.0
offset_bottom = 49.0
texture = ExtResource("2_gfnn2")

[node name="Panel" type="Panel" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 182.0
offset_bottom = 64.0
theme_override_styles/panel = ExtResource("3_2i0t0")

[node name="Darken" type="Panel" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 182.0
offset_bottom = 64.0
theme_override_styles/panel = ExtResource("4_7piuy")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
